--- a/.env.example
+++ b/.env.example
@@ -19,5 +19,10 @@ TLS_ENABLED=false
 TLS_CERT_FILE=
 TLS_KEY_FILE=
 
-# Caddy Email for notifications
+# Caddy environment
 CADDY_EMAIL=
+PROD_DOMAIN=arkfile.net
+TEST_DOMAIN=test.arkfile.net
+HOST=test.arkfile.net # or arkfile.net
+PROD_PORT=8080
+TEST_PORT=8081
