add DB test/prod logic

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,22 @@
+# .env.example
+
+# Host setting (determines which environment we're in)
+HOST=test.arkfile.net # or arkfile.net
+
 # Server Configuration
-PORT=8080
 JWT_SECRET=your_very_secure_jwt_secret_key_here
+
+# Domain settings
+PROD_DOMAIN=arkfile.net
+TEST_DOMAIN=test.arkfile.net
+
+# Port settings
+PROD_PORT=8080
+TEST_PORT=8081
+
+# Database paths
+PROD_DB_PATH=/opt/arkfile/arkfile/arkfile.db
+TEST_DB_PATH=/opt/arkfile-test/arkfile/arkfile-test.db
 
 # Backblaze Configuration
 BACKBLAZE_ENDPOINT=s3.something.backblazeb2.com
@@ -11,18 +27,10 @@ BACKBLAZE_BUCKET_NAME=your_bucket_name
 # Vultr Configuration
 VULTR_API_KEY=your_vultr_api_key
 
-# Database Configuration
-DB_PATH=./databasename.db
-
 # TLS Configuration (for development)
 TLS_ENABLED=false
 TLS_CERT_FILE=
 TLS_KEY_FILE=
 
-# Caddy environment
-CADDY_EMAIL=
-PROD_DOMAIN=arkfile.net
-TEST_DOMAIN=test.arkfile.net
-HOST=test.arkfile.net # or arkfile.net
-PROD_PORT=8080
-TEST_PORT=8081
+# Caddy Email (Passed to Let's Encrypt)
+CADDY_EMAIL=admin@domain.com
