update .env.example, add comments

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@
 HOST=test.arkfile.net # or arkfile.net
 
 # Server Configuration
+# - generate a new JWT secret for each deployment
+# - e.g. run: `openssl rand -hex 32`
+# - store this here and keep it private and secure
 JWT_SECRET=your_very_secure_jwt_secret_key_here
 
 # Domain settings
@@ -27,10 +30,11 @@ BACKBLAZE_BUCKET_NAME=your_bucket_name
 # Vultr Configuration
 VULTR_API_KEY=your_vultr_api_key
 
-# TLS Configuration (for development)
+# Caddy Email (Passed to Let's Encrypt)
+CADDY_EMAIL=admin@domain.com
+
+# TLS Configuration (for local development only)
 TLS_ENABLED=false
 TLS_CERT_FILE=
 TLS_KEY_FILE=
 
-# Caddy Email (Passed to Let's Encrypt)
-CADDY_EMAIL=admin@domain.com
