--- a/Caddyfile
+++ b/Caddyfile
@@ -1,80 +1,76 @@
 {
-    email {env.CADDY_EMAIL}
-    acme_dns vultr {env.VULTR_API_KEY}
+	email youractualemail@example.com
+	acme_dns vultr {$VULTR_API_KEY}
 }
 
 # Shared security header configuration
 (security_headers) {
-    header {
-        # Enable HSTS
-        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-        # Prevent clickjacking
-        X-Frame-Options "SAMEORIGIN"
-        # Prevent XSS attacks
-        X-XSS-Protection "1; mode=block"
-        # Prevent MIME-sniffing
-        X-Content-Type-Options "nosniff"
-        # CSP
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline';"
-    }
+	header {
+		# Enable HSTS
+		Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+		# Prevent clickjacking
+		X-Frame-Options "SAMEORIGIN"
+		# Prevent XSS attacks
+		X-XSS-Protection "1; mode=block"
+		# Prevent MIME-sniffing
+		X-Content-Type-Options "nosniff"
+		# CSP
+		Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline';"
+	}
 }
 
 # Shared reverse proxy configuration
 (proxy_config) {
-    health_uri /health
-    health_interval 30s
-    health_timeout 10s
-    health_status 200
-    timeout 30s
-    header_up X-Real-IP {remote_host}
-    header_up X-Forwarded-Proto {scheme}
-    header_up X-Forwarded-For {remote_host}
+	health_uri /health
+	health_interval 30s
+	health_timeout 10s
+	health_status 200
 }
 
 # Production site
 arkfile.net {
-    encode gzip
+	encode gzip
 
-    tls {
-        dns vultr {env.VULTR_API_KEY}
-    }
+	tls {
+		dns vultr {$VULTR_API_KEY}
+	}
 
-    import security_headers
+	import security_headers
 
-    reverse_proxy localhost:{env.PROD_PORT} {
-        import proxy_config
-    }
+	reverse_proxy localhost:{$PROD_PORT} {
+		import proxy_config
+	}
 
-    log {
-        output file /var/log/caddy/prod-access.log
-        format json
-    }
+	log {
+		output file /var/log/caddy/prod-access.log
+		format json
+	}
 
-    handle_errors {
-        respond "{http.error.status_code} {http.error.status_text}"
-    }
+	handle_errors {
+		respond "{http.error.status_code} {http.error.status_text}"
+	}
 }
 
 # Test site
 test.arkfile.net {
-    encode gzip
+	encode gzip
 
-    tls {
-        dns vultr {env.VULTR_API_KEY}
-    }
+	tls {
+		dns vultr {$VULTR_API_KEY}
+	}
 
-    import security_headers
+	import security_headers
 
-    reverse_proxy localhost:{env.TEST_PORT} {
-        import proxy_config
-    }
+	reverse_proxy localhost:{$TEST_PORT} {
+		import proxy_config
+	}
 
-    log {
-        output file /var/log/caddy/test-access.log
-        format json
-    }
+	log {
+		output file /var/log/caddy/test-access.log
+		format json
+	}
 
-    handle_errors {
-        respond "{http.error.status_code} {http.error.status_text}"
-    }
+	handle_errors {
+		respond "{http.error.status_code} {http.error.status_text}"
+	}
 }
