--- a/systemd/caddy.service
+++ b/systemd/caddy.service
@@ -11,6 +11,8 @@ ExecStart=/usr/local/bin/caddy run --config /etc/caddy/Caddyfile
 ExecReload=/usr/local/bin/caddy reload --config /etc/caddy/Caddyfile
 
 Environment=VULTR_API_KEY=your_vultr_api_key
+Environment=XDG_DATA_HOME=/var/lib/caddy/.local/share
+Environment=XDG_CONFIG_HOME=/var/lib/caddy/.config
 
 # Security measures
 NoNewPrivileges=yes
