add shareable download links, default storage limit, admin fn's; set min TLS to 1.2

--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,107 @@
 # .env.example
 
-# Host setting (determines which environment we're in)
-HOST=test.arkfile.net # or arkfile.net
+# Environment Configuration
+# - Copy this file to /opt/arkfile/etc/[env]/secrets.env for each environment
+# - Replace [env] with either 'prod' or 'test'
+# - Each environment should have its own configuration file with appropriate values
 
-# Server Configuration
-# - generate a new JWT secret for each deployment
-# - e.g. run: `openssl rand -hex 32`
-# - store this here and keep it private and secure
+# Application Environment
+# This determines which environment configuration to use
+ENV=prod  # or 'test'
+
+# Domain Configuration
+DOMAIN=arkfile.net       # for prod
+# DOMAIN=test.arkfile.net  # for test
+
+# Service Configuration
+PORT=8080            # Use 8080 for prod, 8081 for test
+BASE_DIR=/opt/arkfile
+SERVICE_USER=arkprod  # Use 'arkprod' for prod, 'arktest' for test
+
+# Database Configuration
+DB_PATH=/opt/arkfile/var/lib/${ENV}/arkfile.db
+
+# Security Configuration
+# Generate new secrets for each environment using:
+# JWT secret:     openssl rand -hex 32
+# DB encryption:  openssl rand -hex 32
 JWT_SECRET=your_very_secure_jwt_secret_key_here
+DB_ENCRYPTION_KEY=your_32_byte_hex_encoded_key_here  # Must be exactly 32 bytes when hex decoded
 
-# Domain settings
-PROD_DOMAIN=arkfile.net
-TEST_DOMAIN=test.arkfile.net
+# Admin Configuration
+# Comma-separated list of admin email addresses
+# These users will:
+# - Be automatically approved upon registration
+# - Have admin privileges to approve other users
+# - Be able to modify user storage limits
+ADMIN_EMAILS=admin@domain.com,admin2@domain.com
 
-# Port settings
-PROD_PORT=8080
-TEST_PORT=8081
-
-# Database paths
-PROD_DB_PATH=/opt/arkfile/arkfile/arkfile.db
-TEST_DB_PATH=/opt/arkfile-test/arkfile/arkfile-test.db
+# Storage Configuration
+# Default storage limit is 10GB per user
+# Admins can modify individual user limits through the API
+# Storage size is tracked in bytes for all uploaded files
 
 # Backblaze Configuration
+# Use separate buckets for prod and test environments
 BACKBLAZE_ENDPOINT=s3.something.backblazeb2.com
 BACKBLAZE_KEY_ID=your_backblaze_key_id
 BACKBLAZE_APPLICATION_KEY=your_backblaze_application_key
-BACKBLAZE_BUCKET_NAME=your_bucket_name
+BACKBLAZE_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
 
-# Vultr Configuration
+# Vultr Configuration (for Caddy DNS challenges)
 VULTR_API_KEY=your_vultr_api_key
 
-# Caddy Email (Passed to Let's Encrypt)
+# Caddy Configuration
 CADDY_EMAIL=admin@domain.com
 
-# TLS Configuration (for local development only)
-TLS_ENABLED=false
-TLS_CERT_FILE=
-TLS_KEY_FILE=
+# Logging Configuration
+LOG_LEVEL=info      # Available levels: debug, info, warn, error
+LOG_FORMAT=json     # Available formats: json, text
 
+# TLS Configuration (for local development only)
+TLS_ENABLED=false   # Set to true in production
+TLS_CERT_FILE=      # Only used if TLS_ENABLED=true
+TLS_KEY_FILE=       # Only used if TLS_ENABLED=true
+
+# Service Dependencies
+# These settings are used by systemd service templates
+WANTS_SERVICES=caddy.service  # Additional services to wait for
+
+# Release Management
+KEEP_RELEASES=5    # Number of previous releases to maintain
+
+# Example Environment-Specific Values:
+#
+# Production (/opt/arkfile/etc/prod/secrets.env):
+# ENV=prod
+# DOMAIN=arkfile.net
+# PORT=8080
+# SERVICE_USER=arkprod
+# DB_PATH=/opt/arkfile/var/lib/prod/arkfile.db
+# DB_ENCRYPTION_KEY=<unique-prod-key>        # Generate unique key for production
+# JWT_SECRET=<unique-prod-jwt>               # Generate unique JWT secret for production
+# BACKBLAZE_BUCKET_NAME=arkfile-prod
+# ADMIN_EMAILS=admin@domain.com              # Production admin list
+#
+# Test (/opt/arkfile/etc/test/secrets.env):
+# ENV=test
+# DOMAIN=test.arkfile.net
+# PORT=8081
+# SERVICE_USER=arktest
+# DB_PATH=/opt/arkfile/var/lib/test/arkfile.db
+# DB_ENCRYPTION_KEY=<unique-test-key>        # Generate unique key for test
+# JWT_SECRET=<unique-test-jwt>               # Generate unique JWT secret for test
+# BACKBLAZE_BUCKET_NAME=arkfile-test
+# ADMIN_EMAILS=testadmin@domain.com          # Test environment admin list
+
+# Security Note:
+# - All encryption keys and secrets should be unique per environment
+# - Generate encryption keys and secrets using: openssl rand -hex 32
+# - Never reuse keys between environments
+# - Store keys securely and never commit to version control
+# - Admin email addresses should be carefully controlled and reviewed
+# - Consider using separate admin accounts for prod and test environments
+
+# Note: This file serves as a template and documentation.
+# Never commit actual secrets or credentials to version control.
+# Each environment should have its own secrets.env file with real values.
