allow multiple S3 storage backends for Minio

--- a/.env.example
+++ b/.env.example
@@ -41,12 +41,19 @@ ADMIN_EMAILS=admin@domain.com,admin2@domain.com
 # Admins can modify individual user limits through the API
 # Storage size is tracked in bytes for all uploaded files
 
-# Backblaze Configuration
-# Use separate buckets for prod and test environments
-BACKBLAZE_ENDPOINT=s3.something.backblazeb2.com
-BACKBLAZE_KEY_ID=your_backblaze_key_id
-BACKBLAZE_APPLICATION_KEY=your_backblaze_application_key
-BACKBLAZE_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
+# S3-Compatible Storage Configuration
+# Supported providers: backblaze, wasabi, vultr
+STORAGE_PROVIDER=backblaze  # Provider to use (backblaze, wasabi, vultr)
+S3_ENDPOINT=s3.something.backblazeb2.com  # Required for Backblaze
+S3_REGION=us-west-1        # Required for Wasabi/Vultr (e.g., us-west-1 for Wasabi, ewr for Vultr)
+S3_ACCESS_KEY_ID=your_key_id
+S3_SECRET_KEY=your_secret_key
+S3_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
+
+# Provider-specific notes:
+# Backblaze: Only S3_ENDPOINT needs to be set manually
+# Wasabi: Requires S3_REGION, endpoint auto-generated as s3.[region].wasabi.com
+# Vultr: Requires S3_REGION, endpoint auto-generated as [region].vultrobjects.com
 
 # Vultr Configuration (for Caddy DNS challenges)
 VULTR_API_KEY=your_vultr_api_key
@@ -80,7 +87,7 @@ KEEP_RELEASES=5    # Number of previous releases to maintain
 # DB_PATH=/opt/arkfile/var/lib/prod/arkfile.db
 # DB_ENCRYPTION_KEY=<unique-prod-key>        # Generate unique key for production
 # JWT_SECRET=<unique-prod-jwt>               # Generate unique JWT secret for production
-# BACKBLAZE_BUCKET_NAME=arkfile-prod
+# S3_BUCKET_NAME=arkfile-prod
 # ADMIN_EMAILS=admin@domain.com              # Production admin list
 #
 # Test (/opt/arkfile/etc/test/secrets.env):
@@ -91,7 +98,7 @@ KEEP_RELEASES=5    # Number of previous releases to maintain
 # DB_PATH=/opt/arkfile/var/lib/test/arkfile.db
 # DB_ENCRYPTION_KEY=<unique-test-key>        # Generate unique key for test
 # JWT_SECRET=<unique-test-jwt>               # Generate unique JWT secret for test
-# BACKBLAZE_BUCKET_NAME=arkfile-test
+# S3_BUCKET_NAME=arkfile-test
 # ADMIN_EMAILS=testadmin@domain.com          # Test environment admin list
 
 # Security Note:
