use rqlite for dist/replicated db; add minio local/cluster storage options

--- a/.env.example
+++ b/.env.example
@@ -18,15 +18,14 @@ PORT=8080            # Use 8080 for prod, 8081 for test
 BASE_DIR=/opt/arkfile
 SERVICE_USER=arkprod  # Use 'arkprod' for prod, 'arktest' for test
 
-# Database Configuration
-DB_PATH=/opt/arkfile/var/lib/${ENV}/arkfile.db
+# rqlite Database Configuration
+RQLITE_NODES=localhost:4001        # Comma-separated list of rqlite nodes
+RQLITE_USERNAME=admin              # rqlite authentication username
+RQLITE_PASSWORD=your_secret_here   # rqlite authentication password
 
 # Security Configuration
-# Generate new secrets for each environment using:
-# JWT secret:     openssl rand -hex 32
-# DB encryption:  openssl rand -hex 32
+# Generate new secrets using: openssl rand -hex 32
 JWT_SECRET=your_very_secure_jwt_secret_key_here
-DB_ENCRYPTION_KEY=your_32_byte_hex_encoded_key_here  # Must be exactly 32 bytes when hex decoded
 
 # Admin Configuration
 # Comma-separated list of admin email addresses
@@ -41,9 +40,22 @@ ADMIN_EMAILS=admin@domain.com,admin2@domain.com
 # Admins can modify individual user limits through the API
 # Storage size is tracked in bytes for all uploaded files
 
-# S3-Compatible Storage Configuration
-# Supported providers: backblaze, wasabi, vultr
-STORAGE_PROVIDER=backblaze  # Provider to use (backblaze, wasabi, vultr)
+# Storage Configuration
+# Supported providers: local, cluster, backblaze, wasabi, vultr
+STORAGE_PROVIDER=backblaze  # Choose provider type
+
+# Local Storage Configuration (when STORAGE_PROVIDER=local)
+LOCAL_STORAGE_PATH=/opt/arkfile/var/lib/${ENV}/minio/data
+MINIO_ROOT_USER=minioadmin    # Override default MinIO credentials if needed
+MINIO_ROOT_PASSWORD=minioadmin # Override default MinIO credentials if needed
+
+# MinIO Cluster Configuration (when STORAGE_PROVIDER=cluster)
+MINIO_CLUSTER_NODES=localhost:9000           # Comma-separated list of node addresses
+MINIO_CLUSTER_ACCESS_KEY=your_cluster_key    # Cluster authentication
+MINIO_CLUSTER_SECRET_KEY=your_cluster_secret # Cluster authentication
+MINIO_CLUSTER_BUCKET=arkfile                 # Default bucket name
+
+# S3-Compatible Storage Configuration (when STORAGE_PROVIDER=backblaze/wasabi/vultr)
 S3_ENDPOINT=s3.something.backblazeb2.com  # Required for Backblaze
 S3_REGION=us-west-1        # Required for Wasabi/Vultr (e.g., us-west-1 for Wasabi, ewr for Vultr)
 S3_ACCESS_KEY_ID=your_key_id
@@ -51,6 +63,8 @@ S3_SECRET_KEY=your_secret_key
 S3_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
 
 # Provider-specific notes:
+# Local: Uses MinIO in filesystem mode for local storage
+# Cluster: Uses MinIO in distributed mode across multiple nodes
 # Backblaze: Only S3_ENDPOINT needs to be set manually
 # Wasabi: Requires S3_REGION, endpoint auto-generated as s3.[region].wasabi.com
 # Vultr: Requires S3_REGION, endpoint auto-generated as [region].vultrobjects.com
@@ -84,28 +98,30 @@ KEEP_RELEASES=5    # Number of previous releases to maintain
 # DOMAIN=arkfile.net
 # PORT=8080
 # SERVICE_USER=arkprod
-# DB_PATH=/opt/arkfile/var/lib/prod/arkfile.db
-# DB_ENCRYPTION_KEY=<unique-prod-key>        # Generate unique key for production
-# JWT_SECRET=<unique-prod-jwt>               # Generate unique JWT secret for production
+# RQLITE_NODES=node1:4001,node2:4001,node3:4001
+# RQLITE_USERNAME=admin
+# RQLITE_PASSWORD=<unique-prod-password>
+# JWT_SECRET=<unique-prod-jwt>
 # S3_BUCKET_NAME=arkfile-prod
-# ADMIN_EMAILS=admin@domain.com              # Production admin list
+# ADMIN_EMAILS=admin@domain.com
 #
 # Test (/opt/arkfile/etc/test/secrets.env):
 # ENV=test
 # DOMAIN=test.arkfile.net
 # PORT=8081
 # SERVICE_USER=arktest
-# DB_PATH=/opt/arkfile/var/lib/test/arkfile.db
-# DB_ENCRYPTION_KEY=<unique-test-key>        # Generate unique key for test
-# JWT_SECRET=<unique-test-jwt>               # Generate unique JWT secret for test
+# RQLITE_NODES=localhost:4001
+# RQLITE_USERNAME=admin
+# RQLITE_PASSWORD=<unique-test-password>
+# JWT_SECRET=<unique-test-jwt>
 # S3_BUCKET_NAME=arkfile-test
-# ADMIN_EMAILS=testadmin@domain.com          # Test environment admin list
+# ADMIN_EMAILS=testadmin@domain.com
 
 # Security Note:
-# - All encryption keys and secrets should be unique per environment
-# - Generate encryption keys and secrets using: openssl rand -hex 32
-# - Never reuse keys between environments
-# - Store keys securely and never commit to version control
+# - All passwords and secrets should be unique per environment
+# - Generate secrets using: openssl rand -hex 32
+# - Never reuse secrets between environments
+# - Store secrets securely and never commit to version control
 # - Admin email addresses should be carefully controlled and reviewed
 # - Consider using separate admin accounts for prod and test environments
 
