--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+# .gitignore 
+
 bin/
 obj/
 *.out
 *.so
 go.sum
 vendor/
-
 *.tmp
 *.swp
 .vscode/
@@ -12,7 +13,11 @@ vendor/
 *.bak
 *.old
 .env
-client/main.wasm
 build/
 arkfile.db
 arkfile-test.db
+
+# WASM build artifacts
+client/main.wasm
+client/static/*.wasm
+*.wasm
