update setup scripts and docs

--- a/.env.example
+++ b/.env.example
@@ -69,8 +69,14 @@ S3_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
 # Wasabi: Requires S3_REGION, endpoint auto-generated as s3.[region].wasabi.com
 # Vultr: Requires S3_REGION, endpoint auto-generated as [region].vultrobjects.com
 
-# Vultr Configuration (for Caddy DNS challenges)
-VULTR_API_KEY=your_vultr_api_key
+# DNS Challenge Configuration (for Caddy TLS certificates)
+# Configure based on your DNS provider:
+# CLOUDFLARE_API_TOKEN=your_cloudflare_token
+# AWS_ACCESS_KEY_ID=your_aws_key_id
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# NAMECHEAP_API_USER=your_namecheap_user
+# NAMECHEAP_API_KEY=your_namecheap_key
+# Or use HTTP challenge (requires port 80 accessible)
 
 # Caddy Configuration
 CADDY_EMAIL=admin@domain.com
