--- a/systemd/caddy.service
+++ b/systemd/caddy.service
@@ -11,7 +11,13 @@ ExecStart=/usr/local/bin/caddy run --config /etc/caddy/Caddyfile
 ExecReload=/usr/local/bin/caddy reload --config /etc/caddy/Caddyfile
 
 # Environment configuration
-Environment=VULTR_API_KEY=your_vultr_api_key
+# DNS challenge configuration - set based on your DNS provider
+# Examples:
+# Environment=CLOUDFLARE_API_TOKEN=your_cloudflare_token
+# Environment=AWS_ACCESS_KEY_ID=your_aws_key_id
+# Environment=AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# Environment=NAMECHEAP_API_USER=your_namecheap_user
+# Environment=NAMECHEAP_API_KEY=your_namecheap_key
 Environment=XDG_DATA_HOME=/var/lib/caddy/.local/share
 Environment=XDG_CONFIG_HOME=/var/lib/caddy/.config
 
