update dep, setup, scripts

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ ADMIN_EMAILS=admin@domain.com,admin2@domain.com
 
 # Storage Configuration
 # Supported providers: local, cluster, backblaze, wasabi, vultr
-STORAGE_PROVIDER=backblaze  # Choose provider type
+STORAGE_PROVIDER=local  # Choose provider type (default: local for demo)
 
 # Local Storage Configuration (when STORAGE_PROVIDER=local)
 LOCAL_STORAGE_PATH=/opt/arkfile/var/lib/${ENV}/minio/data
