auth/registration fixes

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,11 @@ JWT_SECRET=your_very_secure_jwt_secret_key_here
 # - Be able to modify user storage limits
 ADMIN_EMAILS=admin@domain.com,admin2@domain.com
 
+# User Approval Configuration
+# Set to true to require admin approval for new user accounts
+# Set to false to automatically approve all new registrations
+REQUIRE_APPROVAL=true
+
 # Storage Configuration
 # Default storage limit is 10GB per user
 # Admins can modify individual user limits through the API
