--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "vendor/aldenml/ecc"]
 	path = vendor/aldenml/ecc
 	url = https://github.com/aldenml/ecc
+[submodule "vendor/stef/libopaque"]
+	path = vendor/stef/libopaque
+	url = https://github.com/stef/libopaque.git
+[submodule "vendor/stef/liboprf"]
+	path = vendor/stef/liboprf
+	url = https://github.com/stef/liboprf.git
