add Amazon S3 support

--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,12 @@
 ENV=prod  # or 'test'
 
 # Domain Configuration
-DOMAIN=arkfile.net       # for prod
-# DOMAIN=test.arkfile.net  # for test
+DOMAIN=arkfile.net
 
 # Service Configuration
-PORT=8080            # Use 8080 for prod, 8081 for test
+PORT=8080
 BASE_DIR=/opt/arkfile
-SERVICE_USER=arkprod  # Use 'arkprod' for prod, 'arktest' for test
+SERVICE_USER=arkfile
 
 # rqlite Database Configuration
 RQLITE_NODES=localhost:4001        # Comma-separated list of rqlite nodes
@@ -46,7 +45,7 @@ REQUIRE_APPROVAL=true
 # Storage size is tracked in bytes for all uploaded files
 
 # Storage Configuration
-# Supported providers: local, cluster, backblaze, wasabi, vultr
+# Supported providers: local, cluster, backblaze, wasabi, vultr, aws-s3
 STORAGE_PROVIDER=local  # Choose provider type (default: local for demo)
 
 # Local Storage Configuration (when STORAGE_PROVIDER=local)
@@ -60,6 +59,12 @@ MINIO_CLUSTER_ACCESS_KEY=your_cluster_key    # Cluster authentication
 MINIO_CLUSTER_SECRET_KEY=your_cluster_secret # Cluster authentication
 MINIO_CLUSTER_BUCKET=arkfile                 # Default bucket name
 
+# Amazon S3 Configuration (when STORAGE_PROVIDER=aws-s3)
+AWS_REGION=us-west-2                        # AWS region (defaults to us-east-1 if not set)
+AWS_ACCESS_KEY_ID=your_aws_access_key       # AWS IAM access key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key   # AWS IAM secret key
+AWS_S3_BUCKET_NAME=arkfile-bucket          # S3 bucket name
+
 # S3-Compatible Storage Configuration (when STORAGE_PROVIDER=backblaze/wasabi/vultr)
 S3_ENDPOINT=s3.something.backblazeb2.com  # Required for Backblaze
 S3_REGION=us-west-1        # Required for Wasabi/Vultr (e.g., us-west-1 for Wasabi, ewr for Vultr)
@@ -70,6 +75,7 @@ S3_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
 # Provider-specific notes:
 # Local: Uses MinIO in filesystem mode for local storage
 # Cluster: Uses MinIO in distributed mode across multiple nodes
+# AWS S3: Uses native Amazon S3, endpoint auto-generated as s3.[region].amazonaws.com
 # Backblaze: Only S3_ENDPOINT needs to be set manually
 # Wasabi: Requires S3_REGION, endpoint auto-generated as s3.[region].wasabi.com
 # Vultr: Requires S3_REGION, endpoint auto-generated as [region].vultrobjects.com
@@ -108,7 +114,7 @@ KEEP_RELEASES=5    # Number of previous releases to maintain
 # ENV=prod
 # DOMAIN=arkfile.net
 # PORT=8080
-# SERVICE_USER=arkprod
+# SERVICE_USER=arkfile
 # RQLITE_NODES=node1:4001,node2:4001,node3:4001
 # RQLITE_USERNAME=admin
 # RQLITE_PASSWORD=<unique-prod-password>
@@ -119,8 +125,8 @@ KEEP_RELEASES=5    # Number of previous releases to maintain
 # Test (/opt/arkfile/etc/test/secrets.env):
 # ENV=test
 # DOMAIN=test.arkfile.net
-# PORT=8081
-# SERVICE_USER=arktest
+# PORT=8080
+# SERVICE_USER=arkfile
 # RQLITE_NODES=localhost:4001
 # RQLITE_USERNAME=admin
 # RQLITE_PASSWORD=<unique-test-password>
