opaque auth & totp fixes; add test scripts

--- a/.env.example
+++ b/.env.example
@@ -32,7 +32,23 @@ RQLITE_PASSWORD=your_secret_here   # rqlite authentication password
 # JWT_PRIVATE_KEY_PATH=/path/to/private.key
 # JWT_PUBLIC_KEY_PATH=/path/to/public.key
 
-# Admin Configuration
+# ============================================================================
+# ADMIN CONFIGURATION
+# ============================================================================
+
+# SECURITY WARNING: These are DEV-ONLY admin accounts!
+# NEVER use arkfile-dev-admin, admin.dev.user, or admin.demo.user in production!
+
+# For development:
+# ADMIN_USERNAMES=arkfile-dev-admin
+
+# For production (replace with your actual admin usernames):
+ADMIN_USERNAMES=your-production-admin-username,second-admin-username
+
+# The application will BLOCK dev admin accounts if ENVIRONMENT=production
+ENVIRONMENT=development
+
+# Legacy email-based admin configuration (still supported)
 # Comma-separated list of admin email addresses
 # These users will:
 # - Be automatically approved upon registration
