rm debug lines; secure dev-admin-test API endpoints; test-app-curl fixes

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,11 @@ ADMIN_USERNAMES=your-production-admin-username,second-admin-username
 # The application will BLOCK dev admin accounts if ENVIRONMENT=production
 ENVIRONMENT=development
 
+# Dev/Test Admin API Configuration
+# Controls whether development/testing admin API endpoints are available
+# CRITICAL: Must be false in production to prevent exposure of dev/test endpoints
+ADMIN_DEV_TEST_API_ENABLED=false
+
 # Legacy email-based admin configuration (still supported)
 # Comma-separated list of admin email addresses
 # These users will:
