--- a/systemd/arkfile.service
+++ b/systemd/arkfile.service
@@ -27,7 +27,7 @@ LoadCredential=jwt_signing_key:/opt/arkfile/etc/keys/jwt/current/signing.key
 # Security hardening
 NoNewPrivileges=yes
 ProtectSystem=strict
-ReadWritePaths=/opt/arkfile/var /opt/arkfile/etc/keys
+ReadWritePaths=/opt/arkfile/var /opt/arkfile/etc/keys /opt/arkfile/var/log
 ProtectHome=yes
 PrivateTmp=yes
 PrivateDevices=yes
