update JWT expiry/refresh/revoke

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@ RQLITE_PASSWORD=your_secret_here   # rqlite authentication password
 # JWT_PRIVATE_KEY_PATH=/path/to/private.key
 # JWT_PUBLIC_KEY_PATH=/path/to/public.key
 
+# JWT Token Lifetime Configuration
+# Token lifetime in minutes (default: 30 minutes for Netflix/Spotify model)
+# Shorter tokens improve security but require more frequent refreshes
+JWT_TOKEN_LIFETIME_MINUTES=30
+
 # ============================================================================
 # ADMIN CONFIGURATION
 # ============================================================================
