--- a/systemd/arkfile.service
+++ b/systemd/arkfile.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Arkfile Secure File Sharing Service
-Documentation=https://github.com/84adam/arkfile
+Documentation=https://github.com/84adam/Arkfile
 After=network.target
 Wants=network.target
 StartLimitIntervalSec=60
